# foodie-map-frontend

./: .babelrc  .eslintrc.json  .flake8  .gitignore  LICENSE  README.md  jest.config.js  jest.setup.js  manage.py  package.json  pyproject.toml  webpack.common.js  webpack.dev.js  webpack.prod.js
.github/workflows/: github-actions.yml
backend/: asgi.py  settings_common.py  settings_development.py  settings_production.py  urls.py  wsgi.py
frontend/: .eslintrc.json  .gitignore  package.json  webpack.dev.js  webpack.prod.js
frontend/public/: index.html  manifest.json
frontend/src/: index.js
frontend/src/components/App/: App.js  App.test.js
frontend/src/components/Bookmarks/: Bookmarks.js  index.js
frontend/src/components/Navbar/: Navbar.js
main/: models.py  serializers.py  tests.py  views.py
public/: index.html  manifest.json
src/: index.js  routesConfig.js
src/components/App/: App.test.js
src/components/Home/: Home.js
src/components/Map/: CustomInfoWindow.js  Map.css  Map.js
src/components/Navbar/: Navbar.js
